<?xml-model href="http://download.ros.org/schema/package_format2.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>rosshow</name>
  <version>2.0.1</version>
  <description>rosshow</description>
  <maintainer email="dheera@dheera.net">dheera</maintainer>
  <license>BSD</license>

  <buildtool_depend condition="$ROS_VERSION == 1">catkin</buildtool_depend>

  <exec_depend condition="$ROS_VERSION == 2">rcl_interfaces</exec_depend>
  <exec_depend condition="$ROS_VERSION == 2">rclpy</exec_depend>
  <exec_depend condition="$ROS_VERSION == 2">builtin_interfaces</exec_depend>

  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>python3-numpy</exec_depend>
  <exec_depend>python3-pil</exec_depend>
  <exec_depend>python3-requests</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>

  <export>
    <build_type condition="$ROS_VERSION == 1">catkin</build_type>
    <build_type condition="$ROS_VERSION == 2">ament_python</build_type>
  </export>
</package>
