<?xml version="1.0"?>
<package>
  <name>rosshow</name>
  <version>1.0.0</version>
  <description>rosshow</description>
  <maintainer email="dheera@dheera.net">dheera</maintainer>
  <license>MIT</license>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <run_depend>python-imaging</run_depend>
  <run_depend>python-numpy</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>
  <export>
  </export>
</package>
